--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home-page
     </title>
-    <link href="Index.css" type="text/css" rel="stylesheet">
+    <link rel="stylesheet" href="index.css">
 </head>
 
 <body class="bodyForside">
     <header class="flex-container">
-        <div style="font-size: 20px; padding-left: 20px;">
+        <div style="font-size: 20px; font-family: Verdana, Geneva, Tahoma, sans-serif;  padding-left: 20px;">
             <!--Here is the introduction-->
-            <p><span style="font-size:xx-large; font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; color: rgb(72, 81, 78);">Welcome to</span> <br> <span style="font-size:xx-large;font-family:'Times New Roman', Times, serif; color: rgb(59, 6, 6);">The Chambord Castle</span>                </p>
-            <p id="intro">How about wedding, seminar, birthday or lunch inside the <b>Chambord castle</b>.<br> Place of dreams, for celebrating the most beutifull momentes of your life. <br> At the restaurant we serv a fresh, quality products, directly from Chambord
-                estate or from the surrounding area.</p>
+            <p><span style="font-size:xx-large; font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; color: rgb(72, 81, 78);">Welcome to</span> <br> <span style="font-size:xx-large;font-style: oblique;font-family:'Times New Roman', Times, serif; color: rgb(59, 6, 6);">The Chambord Castle</span>                </p>
+            <p id="intro">How about wedding, seminar, birthday or lunch inside the <b style="font-style: oblique;">Chambord castle</b>.<br> Place of dreams, for celebrating the most beutifull momentes of your life. <br> At the restaurant we serv a fresh, quality products,
+                directly from Chambord estate or from the surrounding area.</p>
         </div>
         <nav class="navBarForside">
             <!--navigate to the other pages-->
@@ -40,4 +40,5 @@
     </header>
 
 </body>
+
 </html>
