--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home-page
     </title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="Index.css">
 </head>
 
 <body class="bodyForside">
